style.css
html {
    scroll-behavior: smooth;
    /* Ensures smooth scrolling when clicking nav links */
    scroll-snap-type: y mandatory;
    /* Enable vertical scroll snapping, mandatory means it will always snap */
    /* This variable will be set by JavaScript to account for the sticky nav bar's height */
    scroll-padding-top: var(--scroll-padding, 64px);
}

section {

    min-height: calc(100vh - var(--scroll-padding, 64px));
    /* Make each section take full viewport height minus nav height */
    display: flex;
    /* Use flexbox for content centering */
    flex-direction: column;
    justify-content: center;
    align-items: center;
    scroll-snap-align: start;
    /* Snap to the start of each section */
    padding: 1.5rem;
    /* p-6 */
    padding-top: calc(1.5rem + var(--scroll-padding, 64px));
    /* Add padding to prevent content from hiding behind sticky nav, adjusted for p-6 */
    box-sizing: border-box;

    margin-left: auto;
    /* mx-auto */
    margin-right: auto;
    /* mx-auto */
    max-width: 60%;

}

body {
    background-color: #121212;
    color: #ffffff;
    font-family: jetbrains nerd font, monospace;
}

nav {
    background-color: #1e1e1e;
    padding: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: sticky;
    top: 0;
}

nav ul {
    list-style-type: none;
    padding: 0;
    display: flex;
}

nav ul li {
    margin-right: 25px;
}

nav ul li a {
    color: #ffffff;
    text-decoration: none;
}

nav ul li a:hover {

    color: orange;
    font-weight: 500;
}

header {

    color: orange;
    text-align: center;
    margin: 20px 0;
}

li {
    font-size: 24px;
}




h2 {
    font-size: 40px;
    font-weight: 500;
    color: orange;
}

h3 {
    font-size: 32px;
    font-weight: 500;
    color: orange;
}


.about-me {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    gap: 30px;
    padding: 20px;



}

.textframe {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;

    @media (min-width: 1200px) {
        flex-wrap: nowrap;
    }

    flex-direction: row;
    gap: 20px;
}


.frame {
    width: fit-content;
    height: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    padding: 20px;
    border-radius: 20px;
    background-color: #1e1e1e;
    margin-top: 20px;
}

.frame img {
    height: 400px;
    border-radius: 5px;

    text-align: center;
    margin-top: 10px;

}

.text {
    width: auto;
    min-width: 100px;
    margin-top: 20px;
}

.text p,
.skills-description {

    font-size: 24px;
    line-height: 1.5;
}

span {
    font-size: 36px;
    font-weight: 600;
}

.skills {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 30px;

}

.icons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    /* centers wrapped lines */
    gap: 80px;
    /* space between icons */
    margin: 10px auto;

}

i {

    font-size: 80px;

}

.skills .icon {
    width: 15%;

    display: flex;
    align-items: center;
    justify-content: center;
    width: fit-content;
    padding: 20px;
    border-radius: 10px;
    background-color: #1e1e1e;
    transition: all 0.3s ease;
}

.skills .icon:hover {
    color: orange;

    transform: scale(1.1);
}

.skills .icon p {
    margin: 0;
    font-size: 24px;
}

.photoshop-icon {
    width: 100px;
    height: 100px;
    scale: 1.5;
}

.photoshop-icon .background {
    fill: #1e1e1e;

}

.photoshop-icon .text {

    fill: white;
    transition: fill 0.3s ease;
}

.icon:hover .photoshop-icon .text {
    fill: orange;
}
.skills-description {
    text-align: center;
}


.project {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    @media (min-width: 1200px) {
        flex-wrap: nowrap;
    }

    gap: 20px;
}
.project3 {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    flex-direction: column;

}

.project3 .frame {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;

    gap: 10%;
}

.project img {
    width: auto;
    height: 400px;
}

.project3 img  {
    width: auto;
    max-height: 400px;
    min-height: 200px;
}

.project2 .frame , .project1 .frame {

    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    padding: 40px;


}

.project2 .text , .project1 .text , .project3 .text {
 text-align: center;
}

.contact {

    width: 80%;
    min-height: calc(100vh - 100px);
    margin: 50 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
 
    background-color: #1e1e1e;
    color: #ffffff;
}

.contact a {
    color: #ffffff;
}

